media tablet for about

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -41,4 +41,12 @@ body {
     @media screen and (max-width: 1200px) {
         max-width: 1050px;
     }
+
+    @media screen and (max-width: 990px) {
+        max-width: 750px;
+    }
+
+    @media (max-width: 790px) {
+        max-width: 730px;
+    }
 }
