add mobile for about

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -30,6 +30,10 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 
+    @media (max-width: 640px) {
+        padding: 0 10px;
+    }
+
     @media screen and (max-width: 1360px) {
         max-width: 1200px;
     }
@@ -48,5 +52,9 @@ body {
 
     @media (max-width: 790px) {
         max-width: 730px;
+    }
+
+    @media (max-width: 740px) {
+        max-width: calc(345px + (710 - 349) * ((100vw - 350px) / (740 - 350)));
     }
 }
