--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -94,7 +94,7 @@
             bottom: 5px;
 
             @media (max-width: 390px) {
-                left: -65px
+                left: -65px;
             }
         }
     }
@@ -139,10 +139,19 @@
             font-size: 16px;
             margin-left: 50px;
         }
+
+        @media (max-width: 390px) {
+            margin-left: 0;
+        }
     }
 
     &__logo {
         height: 84px;
+
+        @media (max-width: 652px) {
+            width: 186px;
+            height: 64px;
+        }
     }
 
     &__background {
@@ -157,7 +166,11 @@
         }
 
         @media (max-width: 640px) {
-            margin-right: 15px;
+            margin-right: 0;
+        }
+
+        @media (max-width: 390px) {
+            height: auto;
         }
 
         & img {
@@ -222,6 +235,10 @@
         @media (max-width: 750px) {
             padding: 70px 25px;
         }
+
+        @media (max-width: 390px) {
+            padding: 25px;
+        }
     }
 
     &__desc-inner {
@@ -249,6 +266,16 @@
         @media (max-width: 990px) {
             gap: 60px;
             width: 100%;
+        }
+
+        @media (max-width: 715px) {
+            gap: 35px;
+        }
+
+        @media (max-width: 529px) {
+            flex-direction: column;
+            gap: 15px;
+            align-items: start;
         }
     }
 
@@ -290,6 +317,10 @@
         @media (max-width: 750px) {
             padding-right: 35px;
         }
+
+        @media (max-width: 652px) {
+            padding-right: 0;
+        }
     }
 
     &__desc-title {
@@ -305,6 +336,10 @@
         @media (max-width: 990px) {
             font-size: 20px;
         }
+
+        @media (max-width: 725px) {
+            text-align: center;
+        }
     }
 
     &__desc-text {
@@ -314,6 +349,11 @@
         @media (max-width: 990px) {
             font-size: 16px;
             width: 100%;
+        }
+
+        @media (max-width: 380px) {
+            font-size: 15px;
+            line-height: 22px;
         }
     }
 
@@ -330,6 +370,10 @@
 
         @media (max-width: 740px) {
             padding-right: 0;
+        }
+
+        @media (max-width: 380px) {
+            padding-right: 8px;
         }
 
         & p {
@@ -361,6 +405,17 @@
 
         @media (max-width: 740px) {
             line-height: 20px;
+        }
+
+        @media (max-width: 725px) {
+            flex-direction: column;
+            width: 320px;
+            align-items: center;
+            margin: 0 auto;
+        }
+
+        @media (max-width: 380px) {
+            width: auto;
         }
     }
 
