--- a/scss/style.css
+++ b/scss/style.css
@@ -138,9 +138,46 @@ body {
   font-style: normal;
   font-weight: 400;
 }
+@media (max-width: 1393px) {
+  .header__inner {
+    gap: 10px;
+  }
+}
+@media (max-width: 1280px) {
+  .header__inner {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
 .header__high {
   justify-content: end;
   gap: 20px;
+}
+.header__high img {
+  display: none;
+}
+@media (max-width: 1280px) {
+  .header__high img {
+    display: block;
+    margin-left: 45px;
+    cursor: pointer;
+  }
+}
+@media (max-width: 1200px) {
+  .header__high img {
+    margin-left: 30px;
+  }
+}
+@media (min-width: 684px) and (max-width: 716px) {
+  .header__high img {
+    margin-left: 0;
+  }
+}
+@media (max-width: 566px) {
+  .header__high img {
+    margin-left: 5px;
+  }
 }
 .header__phone-row {
   justify-content: space-around;
@@ -148,20 +185,55 @@ body {
   font-size: 24px;
   width: 240px;
 }
+@media (max-width: 390px) {
+  .header__phone-row {
+    gap: 0;
+  }
+}
 .header__email a, .header__info {
   font-size: 15px;
   line-height: 16px;
   color: #878787;
 }
+@media (max-width: 1200px) {
+  .header__info {
+    display: none;
+  }
+}
+@media (max-width: 683px) {
+  .header__email {
+    display: none;
+  }
+}
 .header__phone a {
   width: 700px;
+  font-weight: 700;
   color: #D71635;
+  cursor: pointer;
+}
+@media (max-width: 537px) {
+  .header__phone a {
+    font-size: 18px;
+    line-height: 12px;
+  }
 }
 .header__email a {
   text-decoration: underline;
+  cursor: pointer;
+}
+.header__desc-inner {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 .header__desc {
   text-transform: uppercase;
+}
+@media (max-width: 537px) {
+  .header__desc {
+    font-size: 13px;
+    line-height: 12px;
+  }
 }
 .header__desc span {
   padding-left: 10px;
@@ -169,14 +241,52 @@ body {
 .header__low {
   gap: 20px;
 }
+@media (max-width: 750px) {
+  .header__logo {
+    width: 176px;
+    height: 43px;
+  }
+}
+@media (max-width: 475px) {
+  .header__logo {
+    width: 106px;
+    height: 26px;
+  }
+}
+@media (max-width: 400px) {
+  .header__logo {
+    width: auto;
+    height: auto;
+  }
+}
 .header__description {
   width: 203px;
   font-size: 14px;
   line-height: 17px;
   color: #525252;
 }
+@media (max-width: 990px) {
+  .header__description {
+    display: none;
+  }
+}
+@media (max-width: 1280px) {
+  .header__menu {
+    display: none;
+  }
+}
 .header__menu-list {
   gap: 10px;
+}
+@media (min-width: 1361px) and (max-width: 1386px) {
+  .header__menu-list {
+    gap: 20px;
+  }
+}
+@media (max-width: 1360px) {
+  .header__menu-list {
+    text-align: center;
+  }
 }
 .header__menu-link {
   text-transform: uppercase;
@@ -187,9 +297,21 @@ body {
   line-height: 16px;
   color: black;
 }
+@media (max-width: 1360px) {
+  .header__menu-link {
+    font-size: 15px;
+    line-height: 15px;
+    display: block;
+  }
+}
 .header__menu-link span {
   color: #C5C5C5;
   padding-left: 10px;
+}
+@media (max-width: 1386px) {
+  .header__menu-link span {
+    display: none;
+  }
 }
 
 .banner__container {
