--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -174,6 +174,13 @@
         }
     }
 
+    &__menu-item {
+        @media (min-width: 1281px) and (max-width:1386px) {
+            width: 100%;
+            text-align: center;
+        }
+    }
+
     &__menu-link {
         text-transform: uppercase;
         font-family: 'Rubik';
